# COSMOS-Modeling

./: 1 - Installing ROS  2 - Installing RPLIDAR (ROS Packages)  2 - Running RPLIDAR (ROS Packages)  4 - Installing Colmap  5 - Running OpenMVS  README.md
LIDAR/: 2D Mapping with RPLIDAR and Hector SLAM (ROS Packages).md  3D Mapping with Velodyne VLP-16 (ROS Packages).md  RPLIDAR Data Gathering (ROS Packages).md  RPLIDAR Installation (ROS Packages).md  Velodyne VLP-16 Data Gathering (ROS Packages)  Velodyne VLP-16 Installation (ROS Packages)
ROBOT/: 1 - ROS Install.md  Install-OpenKAI-Jetson-after-ZED.sh  Install-OpenKAI-Jetson-without-ZED.sh  Install-OpenKAI-VEK.sh  ROS Installation.md
ROBOT/rosudp/: CMakeLists.txt  package.xml
ROBOT/rosudp/src/: rosudp.cpp
SFM/: Colmap Installation.md  Colmap Reconstruction  Colmap Reconstruction.md  OpenMVS Installation   OpenMVS Installation.md  OpenMVS Reconstruction.md  Video and Image Convert Commands.md
